[gd_scene load_steps=13 format=3 uid="uid://di0pb23hwj7qv"]

[ext_resource type="Script" path="res://src/player.gd" id="1_wl4ff"]
[ext_resource type="Texture2D" uid="uid://ddgb5cb4dhedu" path="res://ass/player.png" id="2_feudt"]
[ext_resource type="Script" path="res://src/state_machine.gd" id="3_8tomb"]
[ext_resource type="Script" path="res://src/hit_box.gd" id="4_raxma"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wdhh2"]
radius = 2.0

[sub_resource type="Animation" id="Animation_e64y2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_67dm1"]
resource_name = "attack"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_t4jkw"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.9)]
}

[sub_resource type="Animation" id="Animation_4vndj"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kni6f"]
_data = {
"RESET": SubResource("Animation_e64y2"),
"attack": SubResource("Animation_67dm1"),
"idle": SubResource("Animation_t4jkw"),
"run": SubResource("Animation_4vndj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_c21rk"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fvx33"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_wl4ff")

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_wdhh2")

[node name="Skin" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_feudt")

[node name="MoveDirPointer" type="Line2D" parent="."]
points = PackedVector2Array(10, 0, 0, 0)
width = 2.0
default_color = Color(0, 0.105882, 1, 1)

[node name="LookDirPointer" type="Line2D" parent="."]
points = PackedVector2Array(10, 0, 0, 0)
width = 2.0
default_color = Color(0.14902, 1, 0, 1)

[node name="AimDirPointer" type="Line2D" parent="."]
points = PackedVector2Array(10, 0, 0, 0)
width = 2.0
default_color = Color(0.972549, 1, 0, 1)

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("3_8tomb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Skin")
libraries = {
"": SubResource("AnimationLibrary_kni6f")
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AttackRay" type="RayCast2D" parent="."]

[node name="DebugState" type="Label" parent="."]
offset_left = -24.0
offset_top = -40.0
offset_right = 34.0
offset_bottom = -14.0
text = "<state>"

[node name="HitBoxStroke" type="Area2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("4_raxma")

[node name="shape" type="CollisionShape2D" parent="HitBoxStroke"]
shape = SubResource("CircleShape2D_c21rk")

[node name="HitBoxStitch" type="Area2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("4_raxma")

[node name="shape" type="CollisionShape2D" parent="HitBoxStitch"]
shape = SubResource("CircleShape2D_fvx33")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
